[tool.poetry]
name = "begonia-python-sdk"
version = "0.1.0"
description = ""
authors = ["vforfreedom96@gmail.com <vforfreedom96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
httpx = "^0.27.0"
mypy-protobuf = "^3.6.0"
google-api-python-client = "^2.133.0"
pydantic-core = "^2.19.0"
annotated-types = "^0.7.0"
pydantic = "^2.7.4"
typing-extensions = "^4.12.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
